--- a/plugins/RainbowPlugin/css/Rainbow.less
+++ b/plugins/RainbowPlugin/css/Rainbow.less
@@ -6,77 +6,43 @@
 
 //                                                                 
 @container-height: 100vh;
-@search-conversations-bg-color: #fff;
-@main-bg-color: #f2f2f2;
-@details-bg-color: #fff;
-@fixed-width: 250px; // Example fixed width for search-conversations and details
+@search-conversations-bg-color: #ffffff;
+@details-bg-color: #ffffff;
+@fixed-width: 260px;
 
-// Container styles
-/* Import statements and other styles remain unchanged */
 
-/* Adjustments for the container and its children */
 .container {
+
+ //   margin-left: 0px;
     display: flex;
-    flex-direction: row;
     height: 100vh;
+    position: fixed;
     overflow: hidden;
-    flex: 1; // Allows the content section to grow and fill available space
-}
-.details {
-    flex: 0 0 @fixed-width; // Fixed width for search-conversations and details
-    padding: 20px;
-    background-color: #ffffff; // Default background color for search-conversations and details
-    display: none;
-    flex-direction: column;
-    position: relative;
-    margin-top: 20px;
-    flex-shrink: 0;
-    align-items: center;
+    right: 0px;
+    margin-right: 0px;
+    margin-left: 0px;
+    width: 100%;
 
 }
-
 .search-conversations {
-    
-    flex: 0 0 @fixed-width; /* Fixed width for search-conversations and details */
-    background-color: #ffffff; /* Default background color for search-conversations and details */
-    position: relative;
-    margin-top: 20px;
-    flex-shrink: 0;    
+    left: 0 px;
+    flex: 0 0 @fixed-width;
+    /* Fixed width */
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding: 18px;
-    margin-top: 20px; 
-}
-
-.content-section {
-    flex: 1;
-    display: flex;
-    flex-direction: row;
-}
-
-.main {
-    flex: 1; // Ensures the main section takes up the remaining space
-    padding: 20px;
-    flex: 1;
-    padding: 20px;
-    background-color: #f1f2f4;
-    display: flex;
-    flex-direction: column;
+    height: 100%;
+    background-color: @search-conversations-bg-color;
     position: relative;
-    overflow: auto;
-}
 
-.hidden {
-    display: none;
 }
-
 
 // search input with the buttons to filter the search 
 .search-form {
-    margin-left: 12px;//Space before the input
+
+    margin-left: 10px;
+    margin-right: 5px;
     position: relative;
-    width: 200px;
+    width: 160px;
     display: flex;
     align-items: center;
 }
@@ -84,44 +50,93 @@
 .search-form input[type="text"] {
     padding: 10px 30px 8px 40px;
     background-color: #f2f2f2;
-    width: 230px;//Width of the input 
+    width: 250px; //Width of the input 
     border-radius: 5px;
     border: none;
     margin-bottom: 8px;
     outline: none;
-    }
+    margin-right: 10px;
+    
+
+}
 
 .search-form .search-icon {
     position: absolute;
     left: 10px;
-    top:10px;
+    top: 12px;
     color: #888;
+
+}
+
+.search-form #closeButton {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+    color: black;
+    font-size: 20px;
+}
+
+.search-form #closeButton:hover {
+    color: #222;
+    /* Darker color */
+    background-color: rgba(0, 0, 0, 0.1);
+    /* Darker background color */
+    cursor: pointer;
+    border-radius: 3px;
+    /* Make it round */
+    width: 22px;
+    height: 22px;
+    z-index: 3;
+    /* Ensure it's above the icon */
+}
+
+.search-form #closeButton:hover i {
+    position: relative;
+    top: 2px;
+    /* Adjust as needed for alignment */
+    left: 2px;
+    right: 2px;
+    bottom: 2px;
+    /* Adjust as needed for alignment */
 }
 
 .search-options {
-    margin-top: 8px;//space between the buttons and the input
+    margin-top: 8px; //space between the buttons and the input
     display: flex;
-    flex-wrap: wrap; /* Allow wrapping of buttons */
-    justify-content: center; /* Center-align buttons */
+    flex-wrap: wrap;
+    /* Allow wrapping of buttons */
+    justify-content: center;
+    /* Center-align buttons */
     display: none;
+    width: 250px;
 }
 
 .search-option {
-    padding: 6px 10px; /* Decrease padding to make the buttons smaller */
-    font-size: 12px; /* Decrease font size to make the text smaller */
+    padding: 6px 10px;
+    /* Decrease padding to make the buttons smaller */
+    font-size: 12px;
+    /* Decrease font size to make the text smaller */
     border: none;
     background-color: #f1f2f4;
     cursor: pointer;
-    transition: background-color 0.3s ease; /* Add transition for smooth hover effect */
-    border-radius: 4px; /* Add border radius to buttons */
-    margin: 4px; /* Add margin to create space between buttons */
-    font-weight: bold; /* Make the text bold */
+    transition: background-color 0.3s ease;
+    /* Add transition for smooth hover effect */
+    border-radius: 4px;
+    /* Add border radius to buttons */
+    margin: 4px;
+    /* Add margin to create space between buttons */
+    font-weight: bold;
+    /* Make the text bold */
+
 }
 
 .search-option.active {
-    background-color: #0270de; /* Blue background for selected option */
-    color: #fff; /* White text for selected option */
-    font-weight: bold; /* Bold text for selected option */
+    background-color: #0270de;
+    /* Blue background for selected option */
+    color: #fff;
+    /* White text for selected option */
+    font-weight: bold;
+    /* Bold text for selected option */
 }
 
 .search-form.active::after {
@@ -129,88 +144,347 @@
     position: absolute;
     left: 0;
     bottom: 0;
-    width: 230px;
+    width: 240px;
     height: 2px;
-    background-color: #0270de; /* Blue line at the bottom of input */
+    background-color: #0270de;
+    /* Blue line at the bottom of input */
 }
 
 /* Apply hover effect only to unselected options */
 .search-option:not(.active):hover {
-    background-color: #e5e5e5; /* Grey background on hover for unselected options */
+    background-color: #e5e5e5;
+    /* Grey background on hover for unselected options */
 }
 
-/*Recent conversations CSS*/
+/* Recent conversations CSS */
 .recent-conversations {
-    width: 190px;
-    padding: 6px;
-    margin: 0px 3px; /* Adjust margin for less space */
+    margin-top: 9px;
+    margin-left: 10px;
+    width: 240px;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
     position: relative;
 }
 
 .dropdown-header {
     display: flex;
+    cursor: pointer;
+    color: #888;
+    margin-bottom: 6px;
+    margin-left: 0px;
+}
+
+
+.dropdown-header i {
+    
+    margin-left: 0; 
+    margin-top: 3px;
+    font-size: 11px;
+    display: flex;
     align-items: center;
-    cursor: pointer; /* Add cursor pointer */
-    color: #888; /* Change text color to grey */
-    margin-bottom: 3px; /* Reduce margin bottom */
-    font-family: Arial, sans-serif; /* Change font-family */
+    justify-content: center;
+
 }
 
 .dropdown-header span {
-    margin-left: 2px;
-    width: 200px;
-    font-size: 12px; /* Make text smaller */
-    color: #888; /* Change text color to grey */
-    outline: none; /* Remove the outline */
-}
+    margin-left: 25px;
+    font-size: 13px;
+    color: #888;
+    outline: none;
 
-.dropdown-header i {
-    margin-right: 5px;
-    transition: transform 0.3s;
-    font-size: 10px; /* Adjust the font-size of the icon */
 }
 
 
 .flipper-flesh {
-    margin-top: 3px; /* Reduce margin-top */
-    width: 100px; /* Make the flesh smaller */
     display: none;
+    flex-direction: column;
+    height: 100%;
 }
 
-.recent-conversations.expanded .flipper-flesh {
-    display: block; /* Show when expanded */
-}
-
+/* Rotate chevron icon when recent conversations are expanded */
 .recent-conversations.expanded .dropdown-header i {
     transform: rotate(90deg);
 }
 
-/* Apply hover effect to dropdown header and flipper flesh */
-.dropdown-header:hover > i,
-.flipper-flesh:hover {
-    background-color: #e5e5e5; /* Add grey background on hover */
-    cursor: pointer; /* Change cursor to pointer on hover */
-    border-radius: 3px; /* Add border radius */
-    width: 12px;
-    height: 12px;
-    z-index: 2;
+/* Show flipper flesh when recent conversations are expanded */
+.recent-conversations.expanded .flipper-flesh {
+    display: block;
 }
 
-/* Adjust margin-left of span on hover */
-.dropdown-header:hover span {
-    margin-left: 0; /* Set margin-left to 0 on hover */
+ // Apply hover effect to dropdown header and flipper 
+.dropdown-header:hover i {
+    background-color: #e5e5e5;
+    width: 15px;
+    height: 15px;
+    cursor: pointer;
+    border-radius: 3px;
+    
 }
 
-/* Remove hover effect from span */
-.dropdown-header span:hover {
-    background-color: transparent;
-    cursor: default;
+/* Keep the i element's position and prevent shifting */
+.dropdown-header i:hover {
+    margin-left: 0;
+} 
+
+.conversation-item {
+    position: relative;
+    background: rgba(255, 255, 255, 0.1);
+    /* Transparent background */
+    display: flex;
+    align-items: center;
+    border-radius: 5px;
+    /* Rounded corners */
+    margin-bottom: 4px;
+    padding: 7px;
+    /* Ensure padding is included in the hover effect */
+}
+
+.conversation-item:hover {
+    background-color: #f2f2f2;
+    cursor: pointer;
+    padding: 7px;
+    box-shadow: 0 0 10px #f2f2f2(0, 0, 0, 0.1);
+}
+
+
+.conversation-item.active {
+    background: #1f68d6;
+}
+
+.conversation-item.active .contact-name,
+.conversation-item.active .last-message {
+    color: white;
+}
+
+
+.search-conversations.collapsed.recent-conversations {
+    display: flex;
+}
+
+.search-conversations.collapsed.recent-conversations.dropdown-header,
+.search-conversations.collapsed.recent-conversations.conversation-item {
+    display: inline-block;
+}
+
+
+.avatar-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.contact-avatar {
+    flex: 0;
+    width: 38px;
+    height: 35px;
+    border-radius: 50%;
+}
+
+.status-icon {
+    align-items: center;
+    position: absolute;
+    bottom: 1px;
+    right: 2px;
+    font-size: 12px;
+    background-color: white;
+    /* Makes the background white */
+    border-radius: 50%;
+    /* Creates a circular shape */
+    padding: 2px;
+    /* Adds space between the icon and the edge of the circle */
+    z-index: 10;
+    /* Ensures it appears above the avatar icon */
+}
+
+.status-icon.online {
+    color: green;
+}
+
+.status-icon.away {
+    color: rgb(255, 204, 0);
+    transform: rotate(15deg) scaleX(-1);
+}
+
+.status-icon.dnd {
+    color: red;
+}
+
+.status-icon.offline {
+    color: grey;
+}
+
+.text-container {
+    margin-left: 0px;
+    display: flex;
+    flex-direction: column;
+}
+
+.contact-name {
+    font-size: 14px;
+    color: #555;
+    font-weight: bold;
+    margin-left: 3px;
+}
+
+.last-message {
+    margin-left: 3px;
+    /* Space between avatar and text container */
+    font-size: 13px;
+    color: #888;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    /* Truncate text with ellipsis */
+    white-space: nowrap;
+    /* Prevent wrapping */
+}
+
+.missed-count {
+  position: absolute; /* Absolute positioning for right-aligned placement */
+  top: 50%; /* Vertical centering */
+  transform: translateY(-50%); /* Vertical centering adjustment */
+  right: 10px;  /* Adjust right margin for desired spacing */
+  display: none;
+  width: 20px;
+  height: 20px;
+  border-radius: 3px;
+  background-color: red;
+  color: white;
+  text-align: center;
+  line-height: 20px; /* Aligns the text vertically in the center */
+}
+
+//
+.control-buttons {
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    /* Distribute space evenly between items */
+    gap: 10px;
+    /* Space between icons */
+}
+
+.notification-button,
+.sound-icon-wrapper,
+.toggle-container {
+    cursor: pointer;
+}
+
+.notification-button {
+    display: flex;
+    position: relative;
+    cursor: pointer;
+    margin-bottom: 7px;
+    z-index: 10001;
+}
+
+
+.sound-icon-wrapper {
+    display: inline-flex;
+    /* Ensures the icon stays together */
+    margin-right: 10px;
+    margin-top: 2.5px;
+}
+
+.toggle-container {
+    cursor: pointer;
+    margin-bottom: 6px;
+}
+
+.icon-group {
+    /* Styles for the new container */
+    display: flex;
+    align-items: center;
+    /* Aligns items vertically in the middle */
+    gap: 16px;
+    /* Space between icons */
+    cursor: pointer;
+}
+
+
+.toggle-icon {
+    font-size: 16px;
+    /* Adjust size as needed */
+    color: #333;
+    bottom: 5px;
+}
+
+
+.notification-center {
+    position: absolute;
+    top: 115px; 
+    left: 450px; 
+    transform: translate(-50%, -100%);
+    width: 400px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    z-index: 10000;
+    padding: 10px;
+    display: flex;
+}
+
+
+.notification-counter {
+    position: absolute;
+    top: -8px;
+    right: 8px;
+    color: red;
+    font-size: 10px;
+    font-weight: bold;
+    padding: 4px;
+}
+
+.notification-card {
+    position: relative; /* Needed for ::after positioning */
+    overflow: hidden; /* Prevents the arrow from extending beyond the card */
 }
 
 
 
+.notification-title {
+    margin-top: 3px;
+    font-size: 17px;
+    color: #333;
+}
 
+.invitation-item {
+            list-style: none;
+            padding: 3px 0;
+            border-bottom: 1px solid #ccc;
+            display: flex;
+            align-items: center;
+        }
 
+        .invitation-avatar {
+            width: 25px;
+            height: 25px;
+            border-radius: 50%;
+            margin-right: 10px;
+        }
+
+        .invitation-text {
+            flex-grow: 1;
+        }
+
+        .invitation-text span {
+            display: block;
+        }
+
+        .accept-icon,
+        .decline-icon {
+            font-size: 24px;
+            cursor: pointer;
+            margin-right: 10px;
+            color: #28a745;
+        }
+
+        .decline-icon {
+            color: #dc3545;
+        }
+        
+        
