--- a/plugins/RainbowPlugin/css/load.less
+++ b/plugins/RainbowPlugin/css/load.less
@@ -71,16 +71,14 @@
     height: 18px; /* Adjust height as needed */
     background-color: #f3f3f3; /* Light grey background */
     border-radius: 5px; /* Rounded corners */
-    overflow: hidden; /* Hide the overflow of the progress bar */
 }
 
 .progress-bar {
-    height: 20px; /* Adjust height as needed */
+    width: 0%;
+    height: 18px; /* Adjust height as needed */
     background-color: @progress-bar-color; /* Green background */
     text-align: center;
-    line-height: 20px; /* Center text vertically */
-    color: white;
-    position: fixed; /* Fixed position at the top */
+    line-height: 18px; /* Center text vertically */
     top: 0;
     left: 0;
     z-index: 1000; /* Ensure it's above other content */
