--- a/plugins/RainbowPlugin/jsp/app/doRainbowSidebar.jspf
+++ b/plugins/RainbowPlugin/jsp/app/doRainbowSidebar.jspf
@@ -1,48 +1,29 @@
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    
-    <link rel="stylesheet" href="../../css/sidebar.css">
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
+<link rel="stylesheet" href="plugins/RainbowPlugin/css/sidebar.css">
 </head>
 
-<%
-jcmsContext.addCSSHeader("css/jalios/core/components/sidebar/jalios-sidebar.css");
-jcmsContext.addJavaScript("js/jalios/core/components/jalios-sidebar.js");
-%>
+<%@page import="com.jalios.util.Util"%>
+
 <div class="sidebar">
-
-    <div class="profile-icon" title="Profile"> <!-- Added profile-icon class here -->
-        <i class="far fa-circle fa-lg" style="color: #4380dd;"></i>
-        <div class="tooltip">Profile</div>
+    <div class="header-icon"><i class="far fa-circle fa-lg" style="color: #4380dd;"></i></div>
+    <div class="icons">
+        <div class="icon"><i class="fas fa-stream fa-lg"></i></div>
+        <div class="icon"><i class="fas fa-comments fa-lg"></i></div>
+        <div class="icon"><i class="fas fa-address-book fa-lg"></i></div>
+        <div class="icon"><i class="fas fa-phone-alt fa-lg"></i></div>
+        <div class="icon"><i class="fas fa-file-alt fa-lg"></i></div>
+        <div class="icon"><i class="fas fa-tasks fa-lg"></i></div>
+        <div class="icon"><i class="fas fa-chart-bar"></i></div>
+       
     </div>
-        
-    <div class="sidebar-icon" title="Channels">
-        <i class="fas fa-stream fa-lg" STY></i>
-        <div class="tooltip">Channels</div>
-    </div>
-
-    <div class="sidebar-icon" title="Bubbles">
-        <i class="fas fa-comments fa-lg"></i>
-        <div class="tooltip">Bubbles</div>
-    </div>
-
-    <div class="sidebar-icon" title="Contacts">
-        <i class="fas fa-address-book fa-lg"></i>
-        <div class="tooltip">Contacts</div>
-    </div>
-
-    <div class="sidebar-icon" title="Calls">
-        <i class="fas fa-phone-alt fa-lg"></i>
-        <div class="tooltip">Calls</div>
-    </div>
-
-    <div class="sidebar-icon" title="Files">
-        <i class="fas fa-file-alt fa-lg"></i>
-        <div class="tooltip">Files</div>
-    </div>
-
-    <div class="sidebar-icon" title="Tasks">
-        <i class="fas fa-tasks fa-lg"></i>
-        <div class="tooltip">Tasks</div>
+    <div class="bottom-icons">
+    <div class="icon"><i class="fas fa-gift"></i></div>
+    <div class="icon"><i class="fas fa-question-circle"></i></div>
+                
     </div>
 </div>
+
 
