--- a/plugins/RainbowPlugin/jsp/app/doRainbowSidebar.jspf
+++ b/plugins/RainbowPlugin/jsp/app/doRainbowSidebar.jspf
@@ -2,7 +2,7 @@
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
-<link rel="stylesheet" href="plugins/RainbowPlugin/css/sidebar.css">
+<link rel="stylesheet" href="../../css/sidebar.css">
 </head>
 
 <%@page import="com.jalios.util.Util"%>
