--- a/plugins/RainbowPlugin/css/sidebar.less
+++ b/plugins/RainbowPlugin/css/sidebar.less
@@ -23,6 +23,8 @@
     color: white;
     position: relative;
     display: flex;
+    margin-left: 1px;
+    margin-top: 1px;
     flex-direction: column;
     align-items: center;
     height: 100%;
