--- a/plugins/RainbowPlugin/css/details.less
+++ b/plugins/RainbowPlugin/css/details.less
@@ -149,10 +149,18 @@
 }
 
 .contact-item {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  padding: 5px 10px; /* Add slight padding to accommodate shadow */
+  border: 1px solid transparent; /* Set a transparent border initially */
 }
+
+.contact-item:hover {
+  background-color: #f2f2f2;
+  cursor: pointer;
+  box-shadow: 0 0 5px rgba(224, 224, 224, 0.2);
+ }
 
 .avatar-container {
     position: relative;
